force-app/main/default/objects/TargetActuals__c/TargetActuals__c.object-meta.xml
<CustomObject>
    <label>TargetActuals</label>
    <nameField>
        <displayFormat>TAR-{0000}</displayFormat>
        <label>TargetActuals ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TargetActuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>