force-app/main/default/objects/TargetActuals__c/fields/Achieved_Percentage_Qty__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Percentage_Qty__c</fullName>
    <formula>IF(NOT(ISBLANK(Target_Quantity_KG__c)) ,  Actual_Quantity_KG__c /  Target_Quantity_KG__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achieved Percentage (Qty)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>