force-app/main/default/objects/TargetActuals__c/fields/Achieved_Percentage_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Percentage_Revenue__c</fullName>
    <formula>IF(NOT(ISBLANK(Target_Revenue__c)) ,  Actual_Revenue__c / Target_Revenue__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Achieved Percentage (Revenue)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>