force-app/main/default/objects/TargetActuals__c/fields/Actual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Actual_Revenue__c</fullName>
    <label>Actual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>