force-app/main/default/objects/TargetActuals__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TargetActuals</relationshipLabel>
    <relationshipName>TargetActuals</relationshipName>
    <type>Lookup</type>
</CustomField>