force-app/main/default/objects/TargetActuals__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>DATE(
    VALUE(TEXT(Year__c)),
    VALUE(TEXT(Month__c)) + 1,
    1
) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>