force-app/main/default/objects/TargetActuals__c/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <formula>CASE(
    TEXT(Month__c),
    &quot;1&quot;, &quot;JAN&quot;, 
    &quot;2&quot;, &quot;FEB&quot;, 
    &quot;3&quot;, &quot;MAR&quot;, 
    &quot;4&quot;, &quot;APR&quot;, 
    &quot;5&quot;, &quot;MAY&quot;, 
    &quot;6&quot;, &quot;JUN&quot;, 
    &quot;7&quot;, &quot;JUL&quot;, 
    &quot;8&quot;, &quot;AUG&quot;, 
    &quot;9&quot;, &quot;SEP&quot;, 
    &quot;10&quot;, &quot;OCT&quot;, 
    &quot;11&quot;, &quot;NOV&quot;, 
    &quot;12&quot;, &quot;DEC&quot;, 
    &quot;Unknown&quot;
) &amp; &quot;_&quot; &amp; TEXT(Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month-Year</label>
    <type>Text</type>
</CustomField>