force-app/main/default/objects/TargetActuals__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SKU</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>TargetActuals</relationshipLabel>
    <relationshipName>TargetActuals</relationshipName>
    <type>Lookup</type>
</CustomField>