force-app/main/default/objects/TargetActuals__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK(User__r.DOJ__c)), 
    YEAR(User__r.DOJ__c) = VALUE(TEXT(Year__c)),
    MONTH(User__r.DOJ__c) = VALUE(TEXT(Month__c))
  ),
  /* If Joining_Date__c is a Date field, use it directly.
     If it&apos;s a Date/Time, wrap with DATEVALUE(). */
     User__r.DOJ__c,
   DATE(VALUE(TEXT(Year__c)), VALUE(TEXT(Month__c)), 1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>