force-app/main/default/objects/TargetActuals__c/fields/Target_Quantity_KG__c.field-meta.xml
<CustomField>
    <fullName>Target_Quantity_KG__c</fullName>
    <label>Target Quantity (KG)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>