force-app/main/default/objects/TargetActuals__c/fields/Yet_to_Achieve_Qty__c.field-meta.xml
<CustomField>
    <fullName>Yet_to_Achieve_Qty__c</fullName>
    <formula>IF(Actual_Quantity_KG__c &lt; Target_Quantity_KG__c, Target_Quantity_KG__c - Actual_Quantity_KG__c, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yet to Achieve (Qty)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>