force-app/main/default/objects/TargetActuals__c/fields/Yet_to_Achieve_Value__c.field-meta.xml
<CustomField>
    <fullName>Yet_to_Achieve_Value__c</fullName>
    <formula>IF(Actual_Revenue__c &lt; Target_Revenue__c, Target_Revenue__c - Actual_Revenue__c, null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yet to Achieve (Value)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>