force-app/main/default/objects/TargetActuals__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Month_Year__c</columns>
    <columns>Type__c</columns>
    <columns>User__c</columns>
    <columns>SKU__c</columns>
    <columns>Customer__c</columns>
    <columns>Target_Quantity_KG__c</columns>
    <columns>Actual_Quantity_KG__c</columns>
    <columns>Achieved_Percentage_Qty__c</columns>
    <columns>Target_Revenue__c</columns>
    <columns>Actual_Revenue__c</columns>
    <columns>Achieved_Percentage_Revenue__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>